--- a/vue-three-game-client/package.json
+++ b/vue-three-game-client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@mdi/js": "^7.2.96",
     "core-js": "^3.8.3",
+    "gsap": "^3.12.2",
     "three": "^0.156.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
@@ -21,24 +21,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    "@vue/cli-service": "~5.0.0"
   },
   "browserslist": [
     "> 1%",
