--- a/vue-three-game-server/connectMySQL/connectMySQL.csproj
+++ b/vue-three-game-server/connectMySQL/connectMySQL.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Config\Mars\" />
+    <Folder Include="Models\Config\Universe\" />
+  </ItemGroup>
+
 </Project>
