--- a/vue-three-game-client/package.json
+++ b/vue-three-game-client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@mdi/js": "^7.2.96",
+    "cannon-es": "^0.20.0",
     "core-js": "^3.8.3",
     "gsap": "^3.12.2",
     "three": "^0.156.1",
