--- a/vue-three-game-client/package.json
+++ b/vue-three-game-client/package.json
@@ -11,7 +11,9 @@
     "@mdi/js": "^7.2.96",
     "cannon-es": "^0.20.0",
     "core-js": "^3.8.3",
+    "dat.gui": "^0.7.9",
     "gsap": "^3.12.2",
+    "stats.js": "^0.17.0",
     "three": "^0.156.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
