--- a/vue-three-game-server/connectMySQL/Properties/launchSettings.json
+++ b/vue-three-game-server/connectMySQL/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "connectMySQL": {
+    "server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
