--- a/vue-three-game-client/package.json
+++ b/vue-three-game-client/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.2",
     "stats.js": "^0.17.0",
     "three": "^0.156.1",
+    "three-to-cannon": "^5.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.16",
