--- a/vue-three-game-server/Dockerfile
+++ b/vue-three-game-server/Dockerfile
@@ -10,4 +10,4 @@ RUN dotnet dev-certs https
 
 EXPOSE 7155
 
-ENTRYPOINT ["dotnet", "run","--project","server.csproj","--urls", "https://0.0.0.0:7155"]
+ENTRYPOINT ["dotnet", "run","--project","server.csproj","--urls", "https://0.0.0.0:7155;http://0.0.0.0:5136"]
